# optimal-distribution-networks

./: .dockerignore  README.md  docker-compose.yml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  sampleProblem.ts  types.ts
frontend/src/components/: Badge.tsx  Card.tsx  CostBreakdownChart.tsx  DCStatusGrid.tsx  FlowTable.tsx  ResultView.tsx  SensitivityPanel.tsx  SummaryCards.tsx  WhatIfPanel.tsx
frontend/src/pages/: Dashboard.tsx  Optimize.tsx  Scenarios.tsx
frontend/src/state/: ResultContext.tsx
go-api/: Dockerfile  go.mod  go.sum
go-api/cmd/server/: main.go
go-api/cmd/stub-solver/: main.go
go-api/internal/api/: cors.go  handlers.go
go-api/internal/kafka/: consumer.go
go-api/internal/solver/: rust_client.go
ruby-reporting/: Gemfile  run_reports.rb
ruby-reporting/lib/: api_client.rb  reporter.rb  scenario.rb
rust-solver/: Cargo.toml  sample_problem.json
rust-solver/src/: main.rs
scala-kafka/: Dockerfile  build.sbt
scala-kafka/src/main/scala/optimizer/: Config.scala  DemandStreamApp.scala  Domain.scala
