[package]
name = "distribution-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solver"
path = "src/main.rs"

[dependencies]
good_lp = { version = "1.8', features = ["highs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }